# containers

./: .gitignore  README.md
.github/workflows/: build.yml
clang/: Dockerfile  install-clang.sh
common/: install-all.sh  install-base-utils.sh  install-cmake.sh  install-valgrind.sh  install-vcpkg.sh
gcc/: Dockerfile  install-gcc.sh
haskell/: Dockerfile  cabal.project.freeze  wordcount-test.cabal
test/: CMakeLists.txt  build-and-run.sh  test.cpp  vcpkg.json
test/cmake/: CompilerWarnings.cmake  ConfigureCompiler.cmake  Dependencies.cmake
ubuntu/: Dockerfile
ubuntu/util/: install-base-utils.sh  install-ccache.sh  install-clang.sh  install-cmake.sh  install-extra-utils.sh  install-gcc.sh  install-valgrind.sh  install-vcpkg.sh
